# financial_types

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  release-plz.toml
.github/workflows/: build.yml  deny.yml  msrv.yml  mutants.yml  release-plz.yml
benches/: enums.rs
examples/: iterate_assets.rs  parse_action.rs  serde_roundtrip.rs  utoipa_schema.rs
src/: lib.rs  prelude.rs
tests/: action.rs  arbitrary.rs  option_style.rs  parse_enum_error.rs  proptest.rs  serde_snapshots.rs  side.rs  underlying_asset_type.rs  utoipa.rs
