[package]
name = "financial_types"
version = "0.1.0"
edition = "2024"
authors = ["Joaquin Bejar <jb@taunais.com>"]
description = "Core financial type definitions for trading systems: asset types, trading actions, position sides, and option styles."
license = "MIT"
readme = "README.md"
repository = "https://github.com/joaquinbejar/financial_types"
homepage = "https://github.com/joaquinbejar/financial_types"
keywords = ["finance", "trading", "options", "types"]
categories = ["finance", "data-structures"]

[features]
default = ["std"]
std = ["serde/std"]
utoipa = ["dep:utoipa", "std"]
arbitrary = ["dep:arbitrary", "std"]
proptest = ["dep:proptest", "std"]

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
utoipa = { version = "5.4", optional = true }
arbitrary = { version = "1.4", optional = true, features = ["derive"] }
proptest = { version = "1.5", optional = true }

[dev-dependencies]
serde_json = { version = "1.0" }

[lib]
name = "financial_types"
path = "src/lib.rs"

[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
indexing_slicing = "warn"
needless_collect = "warn"
unnecessary_to_owned = "warn"
clone_on_ref_ptr = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"

[profile.release]
overflow-checks = true
lto = "thin"
codegen-units = 1

[profile.dev]
overflow-checks = true
