[package]
name = "financial_types"
version = "0.2.1"
edition = "2024"
rust-version = "1.85"
authors = ["Joaquin Bejar <jb@taunais.com>"]
description = "Core financial type definitions for trading systems: asset types, trading actions, position sides, and option styles."
license = "MIT"
readme = "README.md"
repository = "https://github.com/joaquinbejar/financial_types"
homepage = "https://github.com/joaquinbejar/financial_types"
keywords = ["finance", "trading", "options", "types"]
categories = ["finance", "data-structures"]

[features]
default = ["std"]
std = ["serde/std"]
utoipa = ["dep:utoipa", "std"]
arbitrary = ["dep:arbitrary", "std"]
proptest = ["dep:proptest", "std"]

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
utoipa = { version = "5.4", optional = true }
arbitrary = { version = "1.4", optional = true, features = ["derive"] }
proptest = { version = "1.5", optional = true }

[dev-dependencies]
serde_json = { version = "1.0" }
criterion = { version = "0.8", default-features = false, features = ["html_reports"] }

[[bench]]
name = "enums"
harness = false

[lib]
name = "financial_types"
path = "src/lib.rs"

[[example]]
name = "parse_action"
path = "examples/parse_action.rs"

[[example]]
name = "iterate_assets"
path = "examples/iterate_assets.rs"

[[example]]
name = "serde_roundtrip"
path = "examples/serde_roundtrip.rs"

[[example]]
name = "utoipa_schema"
path = "examples/utoipa_schema.rs"
required-features = ["utoipa"]

[lints.rust]
unsafe_code = "deny"
missing_docs = "deny"

[lints.rustdoc]
broken_intra_doc_links = "deny"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
indexing_slicing = "warn"
needless_collect = "warn"
unnecessary_to_owned = "warn"
clone_on_ref_ptr = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"

[profile.release]
overflow-checks = true
lto = "thin"
codegen-units = 1

[profile.dev]
overflow-checks = true
